--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:03:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:15:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d5" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -104,11 +104,7 @@
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                       </div>
-                      <div class="btn__icon">
-                        <div data-wf--icon---material--variant="size" class="icon">
-                          <div class="material-icons">arrow_forward</div>
-                        </div>
-                      </div>
+                      <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
                     </a>
                   </div>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35decd-5d35ddd5" class="nav__menu-btn w-nav-button">
@@ -161,11 +157,7 @@
                             <div class="btn__label btn--secondary">Katso hinnasto</div>
                             <div class="btn__label--hidden btn--secondary">Katso hinnasto</div>
                           </div>
-                          <div class="btn__icon">
-                            <div data-wf--icon---material--variant="size" class="icon">
-                              <div class="material-icons">arrow_downward</div>
-                            </div>
-                          </div>
+                          <div class="btn__icon"><img src="images/blue.svg" loading="lazy" alt="" class="image-8"></div>
                         </a>
                       </div>
                     </div>
@@ -222,71 +214,43 @@
                         </div>
                         <div class="pricing__list">
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Yksisivuinen kotisivu tarpeidesi mukaan</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Hakukoneoptimointi</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Nopea latausaika</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Ilmainen SSL-sertifikaatti</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Ei piilokuluja</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Täysi omistusoikeus</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Tyytyväisyystakuu</div>
                             </div>
@@ -336,71 +300,43 @@
                         </div>
                         <div class="pricing__list">
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Kotisivut tarpeidesi mukaan</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Hakukoneoptimointi</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Nopea latausaika</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Ilmainen SSL-sertifikaatti</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Ei piilokuluja</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Täysi omistusoikeus</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Tyytyväisyystakuu</div>
                             </div>
@@ -449,61 +385,37 @@
                         </div>
                         <div class="pricing__list">
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Tarkka kohdentaminen</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Budjetointi tarpeiden mukaan</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Avainsanatutkimus</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Mainostekstien suunnittelu</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Kampanjastrategia</div>
                             </div>
                           </div>
                           <div data-wf--list---check--variant="primary" class="list-item__component">
-                            <div class="list-item__icon">
-                              <div data-wf--icon---material--variant="xs" class="icon">
-                                <div class="material-icons w-variant-a1228847-8555-e07b-0b8b-ee3e1e6e3095">check</div>
-                              </div>
-                            </div>
+                            <div class="list-item__icon"><img src="images/check.svg" loading="lazy" alt="" class="image-6"></div>
                             <div class="list-item__label">
                               <div>Seuranta ja raportointi</div>
                             </div>
@@ -652,11 +564,7 @@
                             <div class="btn__label btn--overlay">Ota yhteyttä</div>
                             <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                           </div>
-                          <div class="btn__icon">
-                            <div data-wf--icon---material--variant="size" class="icon">
-                              <div class="material-icons">arrow_forward</div>
-                            </div>
-                          </div>
+                          <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
                         </a>
                       </div>
                     </div>
@@ -782,11 +690,7 @@
   <div class="utilities">
     <div data-wf--cursor---hover--variant="primary" class="hover-cursor__component">
       <div class="hover-cursor__wrap">
-        <div class="hover-cursor__icon">
-          <div data-wf--icon---material--variant="size" class="icon">
-            <div class="material-icons">arrow_outward</div>
-          </div>
-        </div>
+        <div class="hover-cursor__icon"><img src="images/arrow-1.svg" loading="lazy" alt="" class="image-7"></div>
       </div>
     </div>
     <div data-wf--loader---global--variant="primary" class="loader"></div>
