--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:03:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:15:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d7" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -106,11 +106,7 @@
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                       </div>
-                      <div class="btn__icon">
-                        <div data-wf--icon---material--variant="size" class="icon">
-                          <div class="material-icons">arrow_forward</div>
-                        </div>
-                      </div>
+                      <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
                     </a>
                   </div>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35decd-5d35ddd5" class="nav__menu-btn w-nav-button">
@@ -163,11 +159,7 @@
                             <div class="btn__label btn--secondary">Tutustu</div>
                             <div class="btn__label--hidden btn--secondary">Tutustu</div>
                           </div>
-                          <div class="btn__icon">
-                            <div data-wf--icon---material--variant="size" class="icon">
-                              <div class="material-icons">arrow_forward</div>
-                            </div>
-                          </div>
+                          <div class="btn__icon"><img src="images/blue.svg" loading="lazy" alt="" class="image-8"></div>
                         </a>
                       </div>
                     </div>
@@ -218,7 +210,7 @@
                 <div class="wrap wrap--2-col">
                   <div id="w-node-_5e7cdda9-7c64-6d70-3f3a-cba4e5d882a3-e5d88295" class="item">
                     <div data-wf--team---global--variant="alternate" class="team__component w-variant-fa53e771-1857-f129-ee52-acfa1771d891">
-                      <div id="w-node-_3f50c4bb-e194-0490-351c-2cefa7d8e33d-a7d8e33c" class="team__img"><img loading="lazy" src="images/eeli-lohi.webp" alt="">
+                      <div id="w-node-_3f50c4bb-e194-0490-351c-2cefa7d8e33d-a7d8e33c" class="team__img"><img loading="lazy" src="images/eeli.webp" alt="">
                         <div class="team__img-mask w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></div>
                       </div>
                       <div id="w-node-_3f50c4bb-e194-0490-351c-2cefa7d8e340-a7d8e33c" class="team__wrap">
@@ -388,11 +380,7 @@
                             <div class="btn__label btn--overlay">Ota yhteyttä</div>
                             <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                           </div>
-                          <div class="btn__icon">
-                            <div data-wf--icon---material--variant="size" class="icon">
-                              <div class="material-icons">arrow_forward</div>
-                            </div>
-                          </div>
+                          <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
                         </a>
                       </div>
                     </div>
@@ -518,11 +506,7 @@
   <div class="utilities">
     <div data-wf--cursor---hover--variant="primary" class="hover-cursor__component">
       <div class="hover-cursor__wrap">
-        <div class="hover-cursor__icon">
-          <div data-wf--icon---material--variant="size" class="icon">
-            <div class="material-icons">arrow_outward</div>
-          </div>
-        </div>
+        <div class="hover-cursor__icon"><img src="images/arrow-1.svg" loading="lazy" alt="" class="image-7"></div>
       </div>
     </div>
     <div data-wf--loader---global--variant="primary" class="loader"></div>
