--- a/401.html
+++ b/401.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:03:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:15:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79270" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -112,11 +112,7 @@
                       <div class="btn__label btn--overlay">Ota yhteyttä</div>
                       <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                     </div>
-                    <div class="btn__icon">
-                      <div data-wf--icon---material--variant="size" class="icon">
-                        <div class="material-icons">arrow_forward</div>
-                      </div>
-                    </div>
+                    <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
                   </a>
                 </div>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35decd-5d35ddd5" class="nav__menu-btn w-nav-button">
@@ -517,11 +513,7 @@
                     <div class="btn__label btn--secondary">Tutustu toimintaamme</div>
                     <div class="btn__label--hidden btn--secondary">Tutustu toimintaamme</div>
                   </div>
-                  <div class="btn__icon">
-                    <div data-wf--icon---material--variant="size" class="icon">
-                      <div class="material-icons">arrow_forward</div>
-                    </div>
-                  </div>
+                  <div class="btn__icon"><img src="images/blue.svg" loading="lazy" alt="" class="image-8"></div>
                 </a>
               </div>
             </div>
