--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:15:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:21:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d5" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -476,11 +476,7 @@
                     <div id="w-node-b1581438-ffd3-2ed6-cb85-7bc440a26179-0b1373e7" class="accordion__heading">
                       <h3>Mitä ylläpitokustannuksia kotisivuissa on?</h3>
                     </div>
-                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle">
-                      <div data-wf--icon---material--variant="size" class="icon">
-                        <div class="material-icons">keyboard_arrow_down</div>
-                      </div>
-                    </div>
+                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle"><img src="images/arrow-down.webp" loading="lazy" alt="" class="image-9"></div>
                   </div>
                   <div class="accordion__content">
                     <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373f2-0b1373e7" class="accordion__text">
@@ -498,11 +494,7 @@
                     <div id="w-node-b1581438-ffd3-2ed6-cb85-7bc440a26179-0b1373e7" class="accordion__heading">
                       <h3>Sisältyykö hakukoneoptimointi (SEO) hintaan?</h3>
                     </div>
-                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle">
-                      <div data-wf--icon---material--variant="size" class="icon">
-                        <div class="material-icons">keyboard_arrow_down</div>
-                      </div>
-                    </div>
+                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle"><img src="images/arrow-down.webp" loading="lazy" alt="" class="image-9"></div>
                   </div>
                   <div class="accordion__content">
                     <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373f2-0b1373e7" class="accordion__text">
@@ -520,11 +512,7 @@
                     <div id="w-node-b1581438-ffd3-2ed6-cb85-7bc440a26179-0b1373e7" class="accordion__heading">
                       <h3>Tarvitseeko maksaa ennakkoon?</h3>
                     </div>
-                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle">
-                      <div data-wf--icon---material--variant="size" class="icon">
-                        <div class="material-icons">keyboard_arrow_down</div>
-                      </div>
-                    </div>
+                    <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373ee-0b1373e7" class="accordion__toggle"><img src="images/arrow-down.webp" loading="lazy" alt="" class="image-9"></div>
                   </div>
                   <div class="accordion__content">
                     <div id="w-node-adc1ad36-a86c-98ad-ba82-3fea0b1373f2-0b1373e7" class="accordion__text">
